# SSES-Admission-Portal

./: AWS_DEPLOYMENT.md  TESTING.md  docker-compose.yml  test.http
calling_backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test_dns.py  test_patch.py
calling_backend/alembic/: env.py
calling_backend/alembic/versions/: 0001_initial.py
calling_backend/app/: config.py  database.py  exceptions.py  main.py  security.py
calling_backend/app/models/: __init__.py  base.py  callback.py  conversation.py  lead.py  memory.py  user.py
calling_backend/app/repositories/: callback_repo.py  conversation_repo.py  lead_repo.py  memory_repo.py  user_repo.py
calling_backend/app/routers/: agent.py  auth.py  callbacks.py  leads.py  plivo_webhook.py  whatsapp.py
calling_backend/app/schemas/: callback.py  lead.py  user.py  webhook.py
calling_backend/app/services/: call_service.py  groq_service.py  knowledge_base.py  memory_service.py  notification_service.py  webhook_processor.py  whatsapp_ai_service.py  whatsapp_service.py
client/: .gitignore  Dockerfile  capacitor.config.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/android/: build.gradle  capacitor.settings.gradle
client/electron/: main.js
client/ios/: README.md
client/src/: App.jsx  index.css  main.jsx
server/: Dockerfile  cleanup-data.js  migrate-attendance-logs.js  package-lock.json  package.json  seed.js  server.js
server/controllers/: analyticsController.js  attendanceController.js  authController.js  leaveController.js  (+9 more)
(+90 files in other folders)
